deploy/dev-aks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prj064-dev-importsystem
  namespace: __KubernetesNamespace__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prj064-dev-importsystem
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: prj064-dev-importsystem
    spec:
      tolerations:
        - key: "system-reserved"
          operator: "Exists"
          effect: "NoSchedule"
        - key: "kube-system-only"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: prj064-dev-importsystem-nginx
          image: nginx:alpine
          imagePullPolicy: Always
          workingDir: /var/www
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: prj064-dev-importsystem
              mountPath: /var/www
            - name: prj064-dev-importsystem-nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
        - name: prj064-dev-importsystem
          image: recordgo.azurecr.io/prj064-dev-importsystem-app:__Build.BuildId__
          imagePullPolicy: Always
          workingDir: /var/www
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: prj064-dev-importsystem-app-local-ini
              mountPath: /usr/local/etc/php/conf.d/local.ini
              subPath: local.ini
      restartPolicy: Always
      volumes:
        - name: prj064-dev-importsystem
          persistentVolumeClaim:
            claimName: prj064-dev-importsystem-shared-claim
        - name: prj064-dev-importsystem-nginx-conf
          configMap:
            name: prj064-dev-importsystem-nginx-conf
        - name: prj064-dev-importsystem-app-local-ini
          configMap:
            name: prj064-dev-importsystem-app-local-ini
